# alignposture

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
backend/: __init__.py  auth.py  database.py  main.py  schemas.py
benchmark/: __init__.py  benchmark_pipeline.py
benchmark/results/: latest.json
frontend/: .env.example  Makefile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/scripts/: copy-pose-assets.mjs
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  pose.ts  styles.css
frontend/src/components/: Brand.tsx  CameraPanel.tsx  History.tsx
frontend/src/hooks/: useCamera.ts
frontend/src/test/: setup.ts
posture_detection/: __init__.py  core.py  history.py  pose.py
tests/: test_api.py  test_core.py  test_history.py
