[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "posture-detection-system"
version = "3.0.0"
description = "Calibrated, real-time posture monitoring with a browser dashboard"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "clerk-backend-api>=3,<4",
  "fastapi>=0.115,<1",
  "python-dotenv>=1,<2",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-cov>=5,<7"]

[project.scripts]
app = "backend.main:app"
posture-api = "backend.main:run"

[tool.vercel]
entrypoint = "backend.main:app"

[tool.vercel.scripts]
build = "npm --prefix frontend ci && npm --prefix frontend run build"

[tool.setuptools.packages.find]
include = ["posture_detection*", "backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
